update and diet for the dockerfile